Fix maintainability issues